--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -198,8 +198,8 @@
 							</div>
 						</div>
 						<div class="col-md-3">
-							<label class="labelSubHeader" style="padding-top: 0">Target
-								Connection </label> <select class="customDropDown" id="targetconn"
+							<label class="labelSubHeader" style="padding-top: 0">TARGET
+								CONNECTION </label> <select class="customDropDown" id="targetconn"
 								required name="targetconn" ng-model="file.targetConnection">
 								<option selected="selected" value="">Please Select</option>
 								<option ng-repeat="src in targetcon">{{src.value}}</option>
