--- a/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
@@ -123,7 +123,7 @@
 						<div class="row" style="padding-bottom: 24px;">
 							<div class="col-md-3">
 								<label
-									ng-class="archivePeriod  ? 'disabledlabel' : 'labelSubHeader'">Archive Period (Days)
+									ng-class="archivePeriod  ? 'disabledlabel' : 'labelSubHeader'">ARCHIVE PERIOD (DAYS)
 									</label> <input type="text" ng-pattern-restrict="[1-9][0-9]{0,2}$" ng-blur="checkarchivePeriod(hadoop.archivePeriod)"
 									name="archiveperiod"  id="archive" maxlength="3"
 									ng-class="archivePeriod ? 'disabledTextBox' : 'customTextBox'"
