Primary Key with *

--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -124,7 +124,7 @@
 							<input type="text"
 								name="joinkey" ng-required="joinKeysRequired"
 								ng-class="joinKeys ? 'disabledTextBox' : 'customTextBox'"
-								id="joinkey" ng-readonly="joinKeys" ng-model="file.joinKeys"
+								id="joinkey" ng-readonly="joinKeys" ng-model="file.joinKeyString"
 								placeholder="Please Enter">
 
 							<div ng-show="showValidationErrors">
