--- a/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
@@ -110,7 +110,7 @@
 								<label ng-class="joinKeys  ? 'disabledlabel' : 'labelSubHeader'">UNIQUE
 									KEY</label> <input type="text" name="joinkey" required
 									ng-class="joinKeys ? 'disabledTextBox' : 'customTextBox'"
-									id="joinkey" ng-model="hadoop.joinKeys"
+									id="joinkey" ng-model="hadoop.joinKeyString"
 									placeholder="Please Enter">
 								<div ng-show="showValidationErrors">
 									<div style="line-height: 3px">&nbsp;</div>
